--- a/certificacionesprueba1/templates/base.html
+++ b/certificacionesprueba1/templates/base.html
@@ -1,8 +1,13 @@
-<html lang="en">
+<html lang="es">
 
 <head>
-    <title>{% block title %}{% endblock %}</title>
-
+    <title>{% block titulo_de_pagina %} {% endblock %}</title>
+    <div style="justify-content: space-between; margin-left: 100px; ">
+    <h1 > 
+        Certificaciones
+        <small class="text-muted">{% block subtitulo %}{% endblock %}</small>
+      </h1>
+    </div>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -13,7 +18,7 @@
 
     </head>
 <body>
-  {% include 'main/includes/navbar.html' %}
+    {% include 'main/includes/navbar.html' %}
     {% block content %}
     {% endblock %}
 </body>
