--- a/certificacionesprueba1/templates/personas/mostrar.html
+++ b/certificacionesprueba1/templates/personas/mostrar.html
@@ -11,7 +11,7 @@
     
 
 
-    <h1>Lista de categorias</h1>
+    <h1>Lista de Personas</h1>
     <table class="table table-dark" border="1" width="600">
     <tr>
     <td>Documento</td>
